# RC-Car-navigation-and-control

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  version.h  version.hpp
.cache/clangd/index/: main.cpp.75C4E96659AF60E1.idx
docs/: architecture.mmd
scripts/: rc_car_toolbox.sh
src/: CMakeLists.txt  main.cpp  navigation.cpp  navigation.hpp  peripheral_driver.cpp  peripheral_driver.hpp  rc-car.cpp  rc-car.hpp  types.h
src/Devices/: DeviceBase.hpp  Gpio.cpp  Gpio.hpp  GyroScope.cpp  GyroScope.hpp  Pwm.cpp  Pwm.hpp  RegisterMap.cpp  RegisterMap.hpp  StereoCam.cpp  StereoCam.hpp  peripheralDriver.cpp  peripheralDriver.hpp
src/Devices/network_interface/: McastAdapter.cpp  TcpServer.cpp  TcpServer.hpp  UdpServer.cpp  UdpServer.hpp  sockets.hpp
src/Modules/: AdapterBase.cpp  AdapterBase.hpp  ModulesDefs.hpp  RcBase.cpp  RcBase.hpp  RcCarTelemetry.cpp  RcCarTelemetry.hpp  RcCommandAndControl.cpp  RcCommandAndControl.hpp  RcCommsController.cpp  RcCommsController.hpp  RcMessageLib.hpp  RcMotorController.cpp  RcMotorController.hpp  RcUpdater.cpp  RcUpdater.hpp  RcVisionControl.cpp  RcVisionControl.hpp  RcWirelessComms.cpp  RcWirelessComms.hpp  cli.cpp  cli.hpp
src/app/: VideoFrame.cpp  VideoFrame.hpp  VideoRecording.cpp  VideoRecording.hpp  VideoStreamer.cpp  VideoStreamer.hpp
src/app/ml/: TensorRTEngine.cpp  TensorRTEngine.hpp
src/app/motor/: MotorLogController.cpp  MotorLogController.hpp
src/app/video/: VideoFrame.cpp  VideoFrame.hpp  VideoLaneNet.cpp  VideoLaneNet.hpp  VideoRecording.cpp  VideoRecording.hpp  VideoStereo.cpp  VideoStereo.hpp  VideoStereoCalibration.cpp  VideoStereoCalibration.hpp  VideoStreamer.cpp  VideoStreamer.hpp
src/cli/: cli.cpp  cli.hpp
src/cuda/: cudaVision.cu
src/cuda/include/: cudaVision.hpp
src/gps_interface/: gps_interface.cpp  gps_interface.hpp
src/lib/: MessageLib.cpp  MessageLib.hpp  RegisterMap.hpp  Thread.cpp  Thread.hpp  VideoStreamer.cpp  VideoStreamer.hpp
src/network_interface/: sockets.hpp  udp_socket.cpp  udp_socket.hpp
src/rc-car-lib/: AdapterBase.hpp  RcBase.cpp  RcBase.hpp  RcMotorController.cpp  RcMotorController.hpp  RcWirelessComms.hpp
src/utils/: CFile.cpp  CFile.hpp  logger.cpp  logger.hpp
tests/: requirements.txt
tests/gps/: CMakeLists.txt  main.cpp
tests/lane-detection/: lane-detection-ml.py  lane-detection.py
tests/tensorRT/: lane-detection-tensor-rt.py
